feat: append of new routes for manger of clubs
